Much faster translation engine
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1112 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,5 @@
-Ver archivos po
-Bool true, false, 1, 0, yes, no, on, off
+Translate Set to use TTringlist
+Add missing controls
 
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
