Increased disable plugin mask to 512 characters (olavrb)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1119 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Hardened buffers in update checker (Tom B, Abdulaziz Alnasi).
 - Implemented ability to read options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
 - Allow reading INI options from all users if available.
+- Increased disable plugin mask to 512 characters (olavrb).
 - Made INI parsing stronger against errors.
 - Improved uninstaller to remove also .INI and .LOG files on user profile.
 - Delay load SHCORE.DLL to prevent startup errors under Wine (trlkly #25).
