--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -139,7 +139,7 @@ ndo
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.208 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
-- libwebp 0.6.0 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
+- libwebp 0.6.1 RC2 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
 - mozjpeg 3.2 - https://github.com/mozilla/mozjpeg
@@ -156,7 +156,7 @@ ndo
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
 - SQLite 3.21.0 - http://www.sqlite.org
-- Tidy 5.4.0 - http://www.html-tidy.org
+- Tidy 5.6.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.4 - http://x128.ho.ua/pngutils.html
 - UPX 3.94 - https://upx.github.io
 - ZLib 1.2.8 - http://www.zlib.net
@@ -164,8 +164,10 @@ ndo
 
 
 X.XX - YYYY
-- Hardened buffers in update checker (Tom B, Abdulaziz Alnasi).
+- Implemented multilanguage support via standard PO files.
 - Implemented ability to read options from registry to prevent users changing them in corporate environments. It will never write in the registry nevertheless (srobert698).
+- Made adding files even faster.
+- Hardened buffers in update checker to avoid crashed with certain AV/firewalls (Tom B, Abdulaziz Alnasi).
 - Allow reading INI options from all users if available.
 - Increased disable plugin mask to 512 characters (olavrb).
 - Made INI parsing stronger against errors.
@@ -173,6 +175,8 @@ X.XX - YYYY
 - Delay load SHCORE.DLL to prevent startup errors under Wine (trlkly #25).
 - Optimized precompiled headers.
 - Updated TruePNG to 0.6.2.4 (Mike).
+- Updated libwebp to 0.6.1 RC2.
+- Updaded Tidy to 5.6.0 (x64 only).
 - Updated pingo to 0.92g x86 and x64 versions.
 - Updated to mutool 1.12 RC1.
 - Some minor optimizations and code cleanup.
