--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,8 +1,3 @@
-Add missing controls recursively
-Tlabel
-Enumerar todos los controles
-https://bitbucket.org/chromiumembedded/cef
-
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
 - Would it be possible for you to add a command line flag to hide the window and just return a 0 or 1 whether the provided file(s) have completed the operations? (Devedse)
@@ -173,6 +168,7 @@ X.XX - YYYY
 - Made INI parsing stronger against errors.
 - Improved uninstaller to remove also .INI and .LOG files on user profile.
 - Delay load SHCORE.DLL to prevent startup errors under Wine (trlkly #25).
+- Added -perfect to mozjpegtran (Psykauze).
 - Optimized precompiled headers.
 - Updated TruePNG to 0.6.2.4 (Mike).
 - Updated libwebp to 0.6.1 RC2.
