--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -148,7 +148,7 @@ ndo
 - pingo 0.92g - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
-- pngquant 2.11.2 - http://www.pngquant.org
+- pngquant 2.11.4 - http://www.pngquant.org
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
@@ -174,6 +174,7 @@ X.XX - YYYY
 - Added -perfect to mozjpegtran (Psykauze).
 - Optimized precompiled headers.
 - Updated TruePNG to 0.6.2.4 (Mike).
+- Updated pngquant to 2.11.4.
 - Updated libwebp to 0.6.1 RC2.
 - Updaded Tidy to 5.6.0 (x64 only).
 - Updated pingo to 0.92g x86 and x64 versions.
