Continue with languages
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1130 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,4 +1,28 @@
-- 1033 has duplicates
+- Combo restaurar idioma
+- Aumentar combos
+
+
+[i]How to translate FileOptimizer in your own language?[/i]
+1) Execute FileOptimizer with the /SAVELANGUAGE command-line argument, like this: D:\\PROYECTOS\\FileOptimizer\\FileOptimizer64.exe /savelanguage
+
+2) Browse all secondary windows (Options, About, Information, ...) and keep using FO for some time.
+
+3) If everything went OK because there was write permissions on FileOptimizer folder, when you close it a file called 1033.po will be available. This file will contain all english strings that have been presented.
+
+4) Make a copy of 1033.po, and name it as the language (LANGID) or locale (LCID) you will be translating to. You can use reference table available here: https://msdn.microsoft.com/library/windows/desktop/dd318693(v=vs.14.0).aspx
+
+For example, if you want to translate it to "Spanish Modern Sort (ES)" name it 3082.po (3082 is 0x0C0A in decimal). If you want to translate it to "Spanish Dominican Republic (DO)" name it 7178.po (7178 is 1C0A in decimal). In the case you want to translate to a language instead of a locale, for instance to "Spanish (es)" for all countries, you should name it 10.po (10 is 0A in decimal).
+
+5) Translate the contents of the copied PO file. It is a text file where for each msgid containing the original english text, you have an empty msgstr with the translation. You can use any text editor like notepad, or dedicated PO utilities, even if they are cloud based (Online PO Editor).
+
+6) When finished, put your new PO file together with FileOptimizer32.exe or FileOptimizer64.exe. If you current system locale is set to the primary language or locale you translated to, FileOptimizer will read it, and translate all the texts according to your translation. Double check nothing is broken, no texts are missing, and lengths is enought to fit on all items in screen.
+
+7) You are now done. You can erase 1033.po. Please post your translation onto https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/ if you will it to be officially included in FileOptimizer.
+
+
+
+
+
 
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
