--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,7 +171,7 @@ ndo
 - mutool 1.12 RC1 - http://mupdf.com/downloads/
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.92j - http://css-ig.net/pingo
+- pingo 0.92k - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.4 - http://www.pngquant.org
@@ -202,8 +202,8 @@ X.XX - YYYY
 - Updated TruePNG to 0.6.2.4 (Mike).
 - Updated pngquant to 2.11.4.
 - Updated libwebp to 0.6.1 RC2.
-- Updaded Tidy to 5.6.0 (x64 only).
-- Updated pingo to 0.92j x86 and x64 versions.
+- Updaded Tidy to 5.6.0.
+- Updated pingo to 0.92k x86 and x64 versions.
 - Updated to mutool 1.12 RC1.
 - Some minor optimizations and code cleanup.
 
