--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,3 +1,4 @@
+- Revisar truepng
 - Backup de controles y así no tener que reiniciar
 - Aumentar combos y labels
 - No se restaura el memo
@@ -198,6 +199,7 @@ X.XX - YYYY
 - Delay load SHCORE.DLL to prevent startup errors under Wine (trlkly #25).
 - Fixed ads were loaded even if hidden (Special).
 - Added -perfect to mozjpegtran (Psykauze).
+- Workarrounded again ImageMagick GIF processing flags as in 11.30 because it is not yet fixed (#26 Dr. Sassafras).
 - Optimized precompiled headers.
 - Updated TruePNG to 0.6.2.4 (Mike).
 - Updated pngquant to 2.11.4.
